--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -84,3 +84,159 @@
   year      = {1990}
 }
 
+@techreport{GaHam92,
+  title       = {Long Run Effects of Business Cycles},
+  author      = {Galí, Jordi and Hammour, J.L.},
+  year        = {1992},
+  institution = {Columbia - Graduate School of Business},
+  type        = {Working Papers},
+  keywords    = {business cycles ; economic models},
+  url         = {https://EconPapers.repec.org/RePEc:fth:colubu:92-26}
+}
+
+@article{Sol56,
+  issn      = {00335533, 15314650},
+  url       = {http://www.jstor.org/stable/1884513},
+  abstract  = {I. Introduction, 65.--II. A model of long-run growth, 66.--III. Possible growth patterns, 68.--IV. Examples, 73.--V. Behavior of interest and wage rates, 78.--VI. Extensions, 85.--VII. Qualifications, 91.},
+  author    = {Robert M. Solow},
+  journal   = {The Quarterly Journal of Economics},
+  number    = {1},
+  pages     = {65--94},
+  publisher = {Oxford University Press},
+  title     = {A Contribution to the Theory of Economic Growth},
+  urldate   = {2024-02-01},
+  volume    = {70},
+  year      = {1956}
+}
+
+@article{Swa56,
+  author  = {Swan, T. W.},
+  title   = {ECONOMIC GROWTH and CAPITAL ACCUMULATION},
+  journal = {Economic Record},
+  volume  = {32},
+  number  = {2},
+  pages   = {334-361},
+  doi     = {https://doi.org/10.1111/j.1475-4932.1956.tb00434.x},
+  url     = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1475-4932.1956.tb00434.x},
+  eprint  = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1475-4932.1956.tb00434.x},
+  year    = {1956}
+}
+
+@article{Sta90,
+  title    = {Business Cycle Models with Endogenous Technology},
+  author   = {Stadler, George W},
+  year     = {1990},
+  journal  = {American Economic Review},
+  volume   = {80},
+  number   = {4},
+  pages    = {763-78},
+  abstract = {This paper compares real and monetary business cycle models with and without endogenous technical change. If technology is endogenous, the properties of these models change significantly. In particular, both real and monetary models yield very similar output processes if growth is endogenous, and changes in aggregate demand can result in permanent changes in productivity, employment, and output. The effect of depreciation of technology is examined, and the pattern of real wage movements over the cycle when money wages are fixed, but technology is changing, is briefly considered. Copyright 1990 by American Economic Association.},
+  url      = {https://EconPapers.repec.org/RePEc:aea:aecrev:v:80:y:1990:i:4:p:763-78}
+}
+
+@book{Ha1941,
+  author    = {Hayek, F. A. and Caldwell, Bruce},
+  editor    = {White, Lawrence H.},
+  title     = {{The Pure Theory of Capital}},
+  publisher = {University of Chicago Press},
+  year      = 1941,
+  month     = {January},
+  volume    = {},
+  number    = {9780226320991},
+  series    = {University of Chicago Press Economics Books},
+  edition   = {},
+  keywords  = {},
+  doi       = {},
+  isbn      = {ARRAY(0x42a86798)},
+  abstract  = {The Pure Theory of Capital , F. A. Hayek's long-overlooked, little-understood volume, was his most detailed work in economic theory. Originally published in 1941 when fashionable economic thought had shifted to John Maynard Keynes, Hayek’s manifesto of capital theory is now available again for today’s students and economists to discover. With a new introduction by Hayek expert Lawrence H. White, who firmly situates the book not only in historical and theoretical context but within Hayek’s own life and his struggle to complete the manuscript, this edition commemorates the celebrated scholar’s last major work in economics. Offering a detailed account of the equilibrium relationships between inputs and outputs in an economy, Hayek’s stated objective was to make capital theory—which had previously been devoted almost entirely to the explanation of interest rates—“useful for the analysis of the monetary phenomena of the real world.” His ambitious goal was nothing less than to develop a capital theory that could be fully integrated into the business cycle theory.},
+  url       = {https://ideas.repec.org/b/ucp/bkecon/9780226320991.html}
+}
+
+@book{Hay33,
+  author    = {Hayek, Friedrich A. von (Friedrich August)},
+  address   = {London},
+  booktitle = {Monetary theory and the trade cycle},
+  language  = {eng},
+  publisher = {J. Cape},
+  series    = {The Bedford series of economic handbooks. Economic theory section},
+  title     = {Monetary theory and the trade cycle / by Friedrich A. Hayek; translated from the German by N. Kaldor and H.M. Croome.},
+  year      = {1933}
+}
+
+@book{key60,
+  title     = {The theory of employment interest and money},
+  author    = {Keynes, John Maynard},
+  year      = {1960},
+  publisher = {Macmillan}
+}
+@article{Pre82,
+  issn      = {00129682, 14680262},
+  url       = {http://www.jstor.org/stable/1913386},
+  abstract  = {The equilibrium growth model is modified and used to explain the cyclical variances of a set of economic time series, the covariances between real output and the other series, and the autocovariance of output. The model is fitted to quarterly data for the post-war U.S. economy. Crucial features of the model are the assumption that more than one time period is required for the construction of new productive capital, and the non-time-separable utility function that admits greater intertemporal substitution of leisure. The fit is surprisingly good in light of the model's simplicity and the small number of free parameters.},
+  author    = {Finn E. Kydland and Edward C. Prescott},
+  journal   = {Econometrica},
+  number    = {6},
+  pages     = {1345--1370},
+  publisher = {[Wiley, Econometric Society]},
+  title     = {Time to Build and Aggregate Fluctuations},
+  urldate   = {2024-02-01},
+  volume    = {50},
+  year      = {1982}
+}
+@techreport{BerGer86,
+  title       = {Agency Costs, Collateral, and Business Fluctuations},
+  author      = {Bernanke, Ben S and Gertler, Mark},
+  institution = {National Bureau of Economic Research},
+  type        = {Working Paper},
+  series      = {Working Paper Series},
+  number      = {2015},
+  year        = {1986},
+  month       = {September},
+  doi         = {10.3386/w2015},
+  url         = {http://www.nber.org/papers/w2015},
+  abstract    = {Bad economic times are typically associated with a high incidence of financial distress, e.g., insolvency and bankruptcy. This paper studies the role of changes in borrower solvency in the initiation and propagation of the business cycle. We first develop a model of the process of financing real investment projects under asymmetric information, extending work by Robert Townsend. A major conclusion here is that when the entrepreneurs who borrow to finance projects are more solvent (have more "collateral"), the deadweight agency costs of investment finance are lower. This model of investment finance is then embedded in a dynamic macroeconomic setting. We show that, first, since reductions in collateral in bad times increase the agency costs of borrowing, which in turn depress the demand for investment, the presence of these financial factors will tend to amplify swings in real output. Second, we find that autonomous factors which affect the collateral of borrowers (as in a "debt-deflation") can actually initiate cycles in output.}
+}
+
+@article{MorDalPisChr94,
+  title     = {Job creation and job destruction in the theory of unemployment},
+  author    = {Mortensen, Dale T and Pissarides, Christopher A},
+  journal   = {The review of economic studies},
+  volume    = {61},
+  number    = {3},
+  pages     = {397--415},
+  year      = {1994},
+  publisher = {Wiley-Blackwell}
+}
+
+@article{LonPLos83,
+  author   = {Long,, John B. and Plosser, Charles I.},
+  title    = {Real Business Cycles},
+  journal  = {Journal of Political Economy},
+  volume   = {91},
+  number   = {1},
+  pages    = {39-69},
+  year     = {1983},
+  doi      = {10.1086/261128},
+  url      = { 
+              
+              https://doi.org/10.1086/261128
+              
+              
+              
+              },
+  eprint   = { 
+              
+              https://doi.org/10.1086/261128
+              
+              
+              
+              },
+  abstract = { In this paper we demonstrate how certain very ordinary economic principles lead maximizing individuals to choose consumption-production plans that display many of the characteristics commonly associated with business cycles. Our explanation is entirely consistent with (i) rational expectations, (ii) complete current information, (iii) stable preferences, (iv) no technological change, (v) no long-lived commodities, (vi) no frictions or adjustment costs, (vii) no government, (viii) no money, and (ix) no serial dependence in the stochastic elements of the environment. We also provide a completely worked out example of the type of artificial economy we have in mind. The time-series properties of the example exhibit some major features of observed business cycles. Although this type of model may not be capable of explaining all of the regularities in actual business cycles, we believe that it provides a useful, well-defined benchmark for assessing the relative importance of factors (e.g., monetary disturbances) that we have deliberately ignored. }
+}
+@book{ManRom91,
+  title     = {New Keynesian Economics: Coordination failures and real rigidities},
+  author    = {Mankiw, N Gregory and Romer, David},
+  volume    = {2},
+  year      = {1991},
+  publisher = {MIT press}
+}
